Reestructuracion de mantenimiento - Parte 3

--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -168,10 +168,10 @@ md-sidenav {
 	color #333 !important
 
 
-.button-floating-bottom
+/*.button-floating-bottom
 	position fixed
 	right 40px
-	bottom 40px
+	bottom 40px*/
 
 md-datepicker-button
 	display none
