--- a/client/app/views/facultades/list.html
+++ b/client/app/views/facultades/list.html
@@ -26,16 +26,16 @@
 </md-content>
 
 <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
-<md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab button-floating-bottom" aria-label="{{UI.message.Buttons.New}}" >
+<md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.New}}" >
   <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
   <md-icon md-font-icon="fa fa-plus fa-lg"></md-icon>
 </md-button>
 
 <!--acciones: se mostraran al seleccionar un elemento del listado-->
-<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling button-floating-bottom">
+<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
  <md-fab-trigger>
    <md-button aria-label="menu" class="md-fab">
-     <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
+     <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
    </md-button>
  </md-fab-trigger>
 
@@ -43,22 +43,22 @@
    <!--custom actions: Se agregan en el controlador solo cuando es necesario considerar mas opciones para cada elemento de la lista-->
    <md-button ng-repeat="action in UI.customActions" aria-label="{{action.label}}" class="md-fab md-raised md-mini" ng-click="action.onclick($event)">
      <md-tooltip md-direction="left">{{action.label}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-building fa-lg tc-pink-500" aria-label="{{action.label}}"></md-icon>
+     <md-icon class="md-accent" md-font-icon="fa fa-building fa-lg tc-pink-500" aria-label="{{action.label}}"></md-icon>
    </md-button>
    <!--end custom actions-->
 
    <!--default actions: Acciones por defecto que contendra cada interfaz de mantenimiento-->
    <md-button aria-label="{{UI.message.Buttons.New}}" class="md-fab md-raised md-mini" ng-click="New($event)">
      <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-plus fa-lg tc-pink-500" aria-label="{{UI.message.Buttons.New}}"></md-icon>
+     <md-icon  md-font-icon="fa fa-plus fa-lg" aria-label="{{UI.message.Buttons.New}}"></md-icon>
    </md-button>
    <md-button aria-label="{{UI.message.Buttons.Edit}}" class="md-fab md-raised md-mini" ng-click="Edit($event)">
      <md-tooltip md-direction="left">{{UI.message.Buttons.Edit}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-pencil fa-lg tc-pink-500" aria-label="{{UI.message.Buttons.Edit}}"></md-icon>
+     <md-icon class="md-accent" md-font-icon="fa fa-pencil fa-lg " aria-label="{{UI.message.Buttons.Edit}}"></md-icon>
    </md-button>
-   <md-button aria-label="{{UI.message.Buttons.Delete}}" class="md-fab md-raised md-mini" ng-click="Delete($event)">
+   <md-button aria-label="{{UI.message.Buttons.Delete}}" class="md-raised md-fab md-mini" ng-click="Delete($event)">
      <md-tooltip md-direction="left">{{UI.message.Buttons.Delete}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-trash fa-lg tc-pink-500" aria-label="{{UI.message.Buttons.Delete}}"></md-icon>
+     <md-icon md-font-icon="fa fa-trash fa-lg md-accent" aria-label="{{UI.message.Buttons.Delete}}"></md-icon>
    </md-button>
    <!--end default actions-->
  </md-fab-actions>
