--- a/client/app/views/periodos/list.html
+++ b/client/app/views/periodos/list.html
@@ -1,57 +1,49 @@
-<md-subheader class="md-primary " style="margin-right: 0">
-<h3>{{UI.title}}</h3>
-</md-subheader>
+<md-content  class="page-content" layout-align="center start" style="background-color:#f2f2f2">
+  <md-subheader class="md-primary " style="margin-right: 0">
+    <h3>{{UI.title}}</h3>
+  </md-subheader>
+
+  <div layout="row" layout-align="center start" layout-margin layout-fill>
+    <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
+      <!--tabla: contiene el listado de elementos-->
+      <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"></md-progress-linear>
+      <table ng-table="tableParams" show-filter="true" class="table table-hover table-condensed table-striped table-bordered ">
+        <tbody>
+          <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
+          <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
+            <td style="width:30px;">
+              <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-pink-500':item.active}"></span>
+            </td>
+            <td class="text-left" data-title="'Nombre'" sortable="nombre" filter="{'nombre':'text'}">{{item.nombre}}</td>
+            <td class="text-left" data-title="'Año'" sortable="anio" filter="{'anio':'text'}">{{item.anio}}</td>
+            <td class="text-left" data-title="'Periodo'" sortable="periodo" filter="{'periodo':'text'}">{{item.periodo}}</td>
+            <td class="text-left" data-title="'Resolución'" sortable="resolucion" filter="{'resolucion':'text'}">{{item.resolucion}}</td>
+            <td class="text-left" data-title="'Fecha Resolución'" sortable="fechaResolucion" filter="{'fechaResolucion':'text'}">{{item.fechaResolucion| date:'dd/MM/yyyy'}}</td>
+            <td class="text-left" data-title="'Inicio'" sortable="inicio" filter="{'inicio':'text'}">{{item.inicio| date:'dd/MM/yyyy'}}</td>
+            <td class="text-left" data-title="'Fin'" sortable="fin" filter="{'fin':'text'}">{{item.fin| date:'dd/MM/yyyy'}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </md-content>
+  </div>
+</md-content>
+
 <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
-<md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab button-floating-bottom" aria-label="{{UI.message.Buttons.New}}" >
+<md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.New}}" >
   <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
   <md-icon md-font-icon="fa fa-plus fa-lg"></md-icon>
 </md-button>
-<div layout="row" layout-align="center start" layout-margin layout-fill>
-<md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
-<!--tabla: contiene el listado de elementos-->
-<md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"></md-progress-linear>
-<table ng-table="tableParams" show-filter="true" class="table table-hover table-condensed table-striped table-bordered ">
-  <tbody>
-    <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
-    <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
-      <td style="width:30px;">
-        <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-pink-500':item.active}"></span>
-      </td>
-      <td class="text-left" data-title="'Nombre'" sortable="nombre" filter="{'nombre':'text'}">
-        {{item.nombre}}
-      </td>
-      <td class="text-left" data-title="'Año'" sortable="anio" filter="{'anio':'text'}">
-        {{item.anio}}
-      </td>
-      <td class="text-left" data-title="'Periodo'" sortable="periodo" filter="{'periodo':'text'}">
-        {{item.periodo}}
-      </td>
-      <td class="text-left" data-title="'Resolución'" sortable="resolucion" filter="{'resolucion':'text'}">
-        {{item.resolucion}}
-      </td>
-      <td class="text-left" data-title="'Fecha Resolución'" sortable="fechaResolucion" filter="{'fechaResolucion':'text'}">
-        {{item.fechaResolucion| date:'dd/MM/yyyy'}}
-      </td>
-      <td class="text-left" data-title="'Inicio'" sortable="inicio" filter="{'inicio':'text'}">
-        {{item.inicio| date:'dd/MM/yyyy'}}
-      </td>
-      <td class="text-left" data-title="'Fin'" sortable="fin" filter="{'fin':'text'}">
-        {{item.fin| date:'dd/MM/yyyy'}}
-      </td>
-    </tr>
-  </tbody>
-</table>
-</md-content>
-</div>
+
+
 <!--acciones: se mostraran al seleccionar un elemento del listado-->
-<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling button-floating-bottom">
+<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
  <md-fab-trigger>
    <md-button aria-label="menu" class="md-fab">
      <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
    </md-button>
  </md-fab-trigger>
- <md-fab-actions>
 
+ <md-fab-actions>
    <!--default actions: Acciones por defecto que contendra cada interfaz de mantenimiento-->
    <md-button aria-label="{{UI.message.Buttons.New}}" class="md-fab md-raised md-mini" ng-click="New($event)">
      <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
