--- a/client/app/views/planestudios/list.html
+++ b/client/app/views/planestudios/list.html
@@ -1,15 +1,17 @@
-<md-subheader class="md-primary " style="margin-right: 0">
-<h3>{{UI.title}}</h3>
-</md-subheader>
-<!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
-<md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab button-floating-bottom" aria-label="{{UI.message.Buttons.New}}" >
-  <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
-  <md-icon md-font-icon="fa fa-plus fa-lg"></md-icon>
-</md-button>
-<div layout="row" layout-align="center start" layout-margin layout-fill>
-<md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
-  <div  flex-container="row" flex-gutter="24">
-      <div flex-item>
+<md-content  class="page-content" layout-align="center start" style="background-color:#f2f2f2">
+  <md-subheader class="md-primary " style="margin-right: 0">
+    <h3>{{UI.title}}</h3>
+  </md-subheader>
+
+  <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
+  <md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.New}}" >
+    <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
+    <md-icon md-font-icon="fa fa-plus fa-lg"></md-icon>
+  </md-button>
+  <div layout="row" layout-align="center start" layout-margin layout-fill>
+    <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
+      <div  flex-container="row" flex-gutter="24">
+        <div flex-item>
           <md-input-container class="md-block">
             <label>Facultad</label>
             <md-select ng-model="filter._facultad" ng-model-options="{trackBy: '$value._id'}" ng-change="LoadEcuelas()">
@@ -18,8 +20,8 @@
               </md-option>
             </md-select>
           </md-input-container>
-      </div>
-      <div flex-item>
+        </div>
+        <div flex-item>
           <md-input-container class="md-block">
             <label>Escuela</label>
             <md-select ng-model="filter._escuela" ng-model-options="{trackBy: '$value._id'}" ng-change="ListPlanEstudios()">
@@ -28,55 +30,48 @@
               </md-option>
             </md-select>
           </md-input-container>
+        </div>
       </div>
-  </div>
-<!--tabla: contiene el listado de elementos-->
-<md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"></md-progress-linear>
-<div class="table-responsive">
-<table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
 
-  <tbody>
-    <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
-    <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
-      <td style="width:30px;">
-        <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-pink-500':item.active}"></span>
-      </td>
-      <td class="text-left" data-title="'Nombre'" sortable="_facultad">
+      <!--tabla: contiene el listado de elementos-->
+      <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"></md-progress-linear>
+      <div class="table-responsive">
+        <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
+          <tbody>
+            <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
+            <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
+              <td style="width:30px;">
+                <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-pink-500':item.active}"></span>
+              </td>
+              <td class="text-left" data-title="'Nombre'" sortable="_facultad">{{item.nombre}}</td>
+              <td class="text-left" data-title="'Periodo Inicio'" sortable="periodo_id" filter="{'periodo_id':'text'}">{{item._periodo.nombre}}</td>
+              <td class="text-left" data-title="'Resolución'" sortable="resolucion" filter="{'resolucion':'text'}">{{item.resolucion}}</td>
+              <td class="text-left" data-title="'Fecha Resolución'">{{item.fecha_resolucion | date:'dd/MM/yyyy'}}</td>
+              <td data-title="'Estado'">
+                <strong>
+                  <a href ng-switch="item.estado" title="{{item.estado}}" ng-click="alert('dsd')">
+                    <span ng-switch-when="Registrado" class="fa fa-pencil tc-blue-grey-500"></span>
+                    <span ng-switch-when="Pendiente" class="fa fa-spinner tc-blue-500"></span>
+                    <span ng-switch-when="Aprobado" class="fa fa-check-circle tc-green-500"></span>
+                    <span ng-switch-when="Observado" class="fa fa-eye tc-orange-500" ></span>
+                  </a>
+                </strong>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </md-content>
+</div>
 
-          {{item.nombre}}
-      </td>
-      <td class="text-left" data-title="'Periodo Inicio'" sortable="periodo_id" filter="{'periodo_id':'text'}">
-        {{item._periodo.nombre}}
-      </td>
-      <td class="text-left" data-title="'Resolución'" sortable="resolucion" filter="{'resolucion':'text'}">
-        {{item.resolucion}}
-      </td>
-      <td class="text-left" data-title="'Fecha Resolución'">
-        {{item.fecha_resolucion | date:'dd/MM/yyyy'}}
-      </td>
-      <td data-title="'Estado'">
-        <strong>
-        <a href ng-switch="item.estado" title="{{item.estado}}" ng-click="alert('dsd')">
-          <span ng-switch-when="Registrado" class="fa fa-pencil tc-blue-grey-500"></span>
-          <span ng-switch-when="Pendiente" class="fa fa-spinner tc-blue-500"></span>
-          <span ng-switch-when="Aprobado" class="fa fa-check-circle tc-green-500"></span>
-          <span ng-switch-when="Observado" class="fa fa-eye tc-orange-500" ></span>
-        </a>
-        </strong>
-      </td>
-    </tr>
-  </tbody>
-</table>
-</div>
-</md-content>
-</div>
 <!--acciones: se mostraran al seleccionar un elemento del listado-->
-<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling button-floating-bottom">
+<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
  <md-fab-trigger>
    <md-button aria-label="menu" class="md-fab">
      <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
    </md-button>
  </md-fab-trigger>
+
  <md-fab-actions>
    <!--custom actions: Se agregan en el controlador solo cuando es necesario considerar mas opciones para cada elemento de la lista-->
    <md-button ng-repeat="action in UI.customActions" aria-label="{{action.label}}" class="md-fab md-raised md-mini" ng-click="action.onclick($event)">
