Actualizacion de librerias mongoose paginate

--- a/client/app/views/blocks/app_header.html
+++ b/client/app/views/blocks/app_header.html
@@ -14,7 +14,8 @@
           </md-button>
           <md-menu-content>
               <md-menu-item><md-button ui-sref='app'>Inicio</md-button></md-menu-item>
-              <md-menu-item><md-button ng-click="$mdCloseMenu()">Configuración</md-button></md-menu-item>
+              <md-menu-item><md-button ng-click="$mdCloseMenu()">Mis Datos</md-button></md-menu-item>
+              <md-menu-item><md-button ng-click="$mdCloseMenu()">Cambiar mi Contraseña</md-button></md-menu-item>
               <md-menu-item><md-button ng-click="Logout()" >Log out</md-button></md-menu-item>
           </md-menu-content>
       </md-menu>
