Reestructuracion Mantenimiento - Parte 5

--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -249,6 +249,6 @@
 </div>
 </md-content>
 </div-->
-<md-button ng-click="New($event)" class="md-fab button-floating-bottom" aria-label="Use Android" >
+<md-button ng-click="New($event)" class="md-fab md-fab-bottom-right" aria-label="Use Android" >
   <md-icon md-font-icon="fa fa-question fa-lg"></md-icon>
 </md-button>
