Agregar actualización de datos del alumno

--- a/client/app/styles/styls/home.styl
+++ b/client/app/styles/styls/home.styl
@@ -1,10 +1,12 @@
+.button-floating-bottom
+  position fixed
+  right 10px
+  bottom 10px
+  z-index 1000
 @media (max-width: 700px)
   .app-title-module
     display none
-  .button-floating-bottom
-    right 10px
-    bottom 10px
-    z-index 1000
+
   .tile-lg
     width: 100%
   .tile-sm
