--- a/client/app/views/blocks/app_header.html
+++ b/client/app/views/blocks/app_header.html
@@ -17,7 +17,7 @@
                 </md-button>
               </md-menu-item>
               <md-menu-item>
-                <md-button ng-click="$mdCloseMenu()">
+                <md-button ng-click="$mdCloseMenu()"  ui-sref="app.alumnomisdatos">
                   <md-icon md-font-icon="fa fa-user fa-lg"></md-icon> Mis Datos
                 </md-button>
               </md-menu-item>
