--- a/client/app/views/home/home_admin.html
+++ b/client/app/views/home/home_admin.html
@@ -2,27 +2,27 @@
   <md-content flex layout-margin  style="max-width:1020px;background-color:#f2f2f2;">
     <div layout="row" layout-sm="column">
       <div class="dashboard display-animation" flex="67" flex-sm="100">
-        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.mic_revisionplanestudios">
+        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.facultad">
           <span class="content-wrapper">
           <span class="tile-content">
-            <span class="tile-img bgc-teal-300" style="background-image: url(images/bghome-7.jpg);background-size:cover;"></span>
+            <span class="tile-img bgc-teal-300" style="background-image: url(images/bghome-1.jpg);background-size:cover;"></span>
             <span class="tile-holder tile-holder-sm grey-500" >
 
-              <span class="title">Revisión del Plan de Estudios</span>
-              <p>Verifique el plan de estudios de acuerdo a las asignaturas base</p>
+              <span class="title">Facultades</span>
+              <p>Administre las facultades y escuelas </p>
             </span>
           </span>
           </span>
         </a>
       </div>
       <div class="dashboard display-animation" flex="33" flex-sm="100">
-        <a href class="tile tile-lg bgc-teal-500 ripple-effect tc-white-1  " ui-sref="app.mic_asignaturas">
+        <a href class="tile tile-lg bgc-teal-500 ripple-effect tc-white-1  " ui-sref="app.pabellones">
           <span class="content-wrapper">
           <span class="tile-content">
-            <span class="tile-img" style="background-image: url(images/bghome-8.jpg);background-size:cover;"></span>
+            <span class="tile-img" style="background-image: url(images/bghome-2.jpg);background-size:cover;"></span>
             <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title tc-white">Registro de Asignaturas</span>
-              <p>Registro de Asignaturas</p>
+              <span class="title tc-white">Pabellones</span>
+              <p>Registro de Pabellones y Aulas</p>
             </span>
           </span>
           </span>
@@ -31,26 +31,26 @@
     </div>
     <div layout="row" layout-sm="column">
       <div class="dashboard display-animation" flex>
-        <a href class="tile tile-lg bgc-green-500  ripple-effect " ui-sref="app.mic_silabus">
+        <a href class="tile tile-lg bgc-green-500  ripple-effect " ui-sref="app.planestudios">
           <span class="content-wrapper">
           <span class="tile-content">
-            <span class="tile-img bgc-white" style="background-image: url(images/bghome-9.jpg);background-size:cover;"></span>
+            <span class="tile-img bgc-white" style="background-image: url(images/bghome-3.jpg);background-size:cover;"></span>
             <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title tc-white">Registro del Silabus</span>
-              <p class="tc-white">Realize el registro del Silabus</p>
+              <span class="title tc-white">Plan de Estudios</span>
+              <p>Refgistro del plan de estudio por escuela</p>
             </span>
           </span>
           </span>
         </a>
       </div>
       <div class="dashboard display-animation" flex>
-        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.mic_silabus">
+        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.facultad">
           <span class="content-wrapper">
           <span class="tile-content">
             <span class="tile-img bgc-white" style="background-image: url(images/bghome-4.jpg);background-size:cover;"></span>
             <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title">Reporte 1</span>
-              <p>Detalle reporte 1</p>
+              <span class="title">Ingresantes</span>
+              <p>Breve Descripción</p>
             </span>
           </span>
           </span>
@@ -64,8 +64,8 @@
                 <i class="fa fa-area-chart fa-5x"></i>
             </span>
             <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title ">Reporte 2</span>
-              <p>Detalle Reporte 2</p>
+              <span class="title ">Reportes</span>
+              <p>Breve Descripción</p>
             </span>
           </span>
           </span>
@@ -75,6 +75,6 @@
   </md-content>
 </div>
 
-<md-button ng-click="New($event)" class="md-fab button-floating-bottom" aria-label="Use Android" >
+<md-button ng-click="New($event)" class="md-fab md-fab-bottom-right" aria-label="Use Android" >
   <md-icon md-font-icon="fa fa-question fa-lg"></md-icon>
 </md-button>
