--- a/client/app/views/app.html
+++ b/client/app/views/app.html
@@ -1,17 +1,27 @@
 <md-sidenav style="overflow:auto" ng-controller="SidenavCtrl" ng-include="'views/blocks/app_sidenav.html'" class="md-sidenav-left md-whiteframe-z2 bg-cyan-900" md-component-id="left">
 
 </md-sidenav>
+
 <div layout="column" flex>
   <md-toolbar ng-include="'views/blocks/app_header.html'" class="app-header">
   </md-toolbar>
 
   <div flex layout="column" ui-view layout-fill>
-    <div ng-if="$root.USER._grupo.codigo=='ADMIN'" layout="row" ng-include="'views/home.html'" flex layout-fill>
+    <div ng-if="$root.USER._grupo.codigo=='ADMIN'" layout="column" ng-include="'views/home/home_admin.html'" flex layout-fill>
 
     </div>
-    <div ng-if="$root.USER._grupo.codigo=='MIC'" layout="row" ng-include="'views/home/home_mic.html'" flex layout-fill>
+    <div ng-if="$root.USER._grupo.codigo=='ALUMNO'" layout="column" ng-include="'views/home/home_alumno.html'" flex layout-fill>
+
+    </div>
+    <div ng-if="$root.USER._grupo.codigo=='MIC'" layout="column" ng-include="'views/home/home_mic.html'" flex layout-fill>
 
     </div>
   </div>
 
 </div>
+<md-button ng-if="$root.showAlert" ng-click="New($event)" class="md-fab md-warn md-fab-bottom-right "  aria-label="ALerta" >
+  <md-tooltip md-visible="true" md-direction="left">
+        <span style="font-size:15px;font-weight:normal;margin:5px">Es necesario actualizar sus datos.</span>
+  </md-tooltip>
+  <md-icon md-font-icon="fa fa-exclamation-triangle fa-lg tc-white"></md-icon>
+</md-button>
