--- a/client/app/public/css/vendors.css
+++ b/client/app/public/css/vendors.css
@@ -15515,7 +15515,7 @@ md-tooltip {
 	@license sc-date-time
 	@author SimeonC
 	@license 2015 MIT
-	@version 1.1.3
+	@version 1.1.6
 	
 	See README.md for requirements and use.
 *//* Start Variable Declaration */
@@ -15565,6 +15565,7 @@ md-tooltip {
 .time-date:not([theme]) .md-button {
   padding: 6px;
   margin: 0;
+  min-width: auto;
   min-width: initial;
   line-height: inherit;
   font-size: inherit;
@@ -15774,7 +15775,7 @@ md-tooltip {
 .time-date > .control > .slider > .time-control > .time-inputs > input {
   border: none;
   border-bottom: 1px solid #000;
-  text-align: right;
+  text-align: center;
   font-size: 6.1rem;
   line-height: 3rem;
   width: 8.4rem;
