--- a/client/app/views/blocks/app_header.html
+++ b/client/app/views/blocks/app_header.html
@@ -22,7 +22,7 @@
                 </md-button>
               </md-menu-item>
               <md-menu-item>
-                <md-button ng-click="$mdCloseMenu()">
+                <md-button ng-click="$mdCloseMenu()"  ui-sref="app.alumnocambiocontrasenia">
                   <md-icon md-font-icon="fa fa-key fa-lg"></md-icon> Cambiar Contraseña
                 </md-button>
               </md-menu-item>
