--- a/client/app/views/home/home_alumno.html
+++ b/client/app/views/home/home_alumno.html
@@ -48,13 +48,13 @@
             </a>
           </div>
           <div class="dashboard display-animation" flex>
-            <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.facultad">
+            <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.alumnocambiocontrasenia">
               <span class="content-wrapper">
               <span class="tile-content">
                 <span class="tile-img bgc-white" style="background-image: url(images/bghome-4.jpg);background-size:cover;"></span>
                 <span class="tile-holder tile-holder-sm grey-500">
                   <span class="title">Cambio de Contraseña</span>
-                  <p>Breve Descripción</p>
+                  <p>Modificación de la Contraseña de Acceso</p>
                 </span>
               </span>
               </span>
