Se agrego cambios en home y cambios en el menu

--- a/client/app/views/home/home_alumno.html
+++ b/client/app/views/home/home_alumno.html
@@ -10,7 +10,7 @@
               <span class="content-wrapper">
               <span class="tile-content">
                 <span class="tile-img bgc-teal-300" style="background-image: url(images/bghome-1.jpg);background-size:cover;"></span>
-                <span class="tile-holder tile-holder-sm grey-500" >
+                <span class="tile-holder tile-holder-sm grey-500 {{item.style.color}}" >
 
                   <span class="title">Matrícula</span>
                   <p>Acceda al módulo de matrícula para registrar sus cursos....</p>
