--- a/client/app/views/home/home_admin.html
+++ b/client/app/views/home/home_admin.html
@@ -1,80 +1,35 @@
-<div layout="row" layout-align="center start" layout-margin layout-fill>
-  <md-content flex layout-margin  style="max-width:1020px;background-color:#f2f2f2;">
-    <div layout="row" layout-sm="column">
-      <div class="dashboard display-animation" flex="67" flex-sm="100">
-        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.facultad">
-          <span class="content-wrapper">
-          <span class="tile-content">
-            <span class="tile-img bgc-teal-300" style="background-image: url(images/bghome-1.jpg);background-size:cover;"></span>
-            <span class="tile-holder tile-holder-sm grey-500" >
+<md-content  class="page-content" layout-align="center start" style="background-color:#f2f2f2;">
+  <md-subheader class="md-primary" style="margin-right: 0">
+    <h3><span class="fa fa-home"></span> Bienvenido al Sistema de Matrícula</h3>
+  </md-subheader>
+  <md-content flex style="max-width:1020px;margin:auto;background-color:#f2f2f2;">
+        <div layout="row" layout-sm="column" ng-repeat="row in rowsCards">
+          <div ng-repeat="item in row" class="dashboard display-animation" flex-sm="100">
+            <a href class="tile tile-lg {{item.style.bgColor}} ripple-effect " >
+              <span class="content-wrapper">
+              <span class="tile-content">
+                <span class="tile-img {{item.style.bgColorHead}}" style="background-image: url(images/{{item.style.image}});background-size:cover;">
 
-              <span class="title">Facultades</span>
-              <p>Administre las facultades y escuelas </p>
-            </span>
-          </span>
-          </span>
-        </a>
-      </div>
-      <div class="dashboard display-animation" flex="33" flex-sm="100">
-        <a href class="tile tile-lg bgc-teal-500 ripple-effect tc-white-1  " ui-sref="app.pabellones">
-          <span class="content-wrapper">
-          <span class="tile-content">
-            <span class="tile-img" style="background-image: url(images/bghome-2.jpg);background-size:cover;"></span>
-            <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title tc-white">Pabellones</span>
-              <p>Registro de Pabellones y Aulas</p>
-            </span>
-          </span>
-          </span>
-        </a>
-      </div>
-    </div>
-    <div layout="row" layout-sm="column">
-      <div class="dashboard display-animation" flex>
-        <a href class="tile tile-lg bgc-green-500  ripple-effect " ui-sref="app.planestudios">
-          <span class="content-wrapper">
-          <span class="tile-content">
-            <span class="tile-img bgc-white" style="background-image: url(images/bghome-3.jpg);background-size:cover;"></span>
-            <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title tc-white">Plan de Estudios</span>
-              <p>Refgistro del plan de estudio por escuela</p>
-            </span>
-          </span>
-          </span>
-        </a>
-      </div>
-      <div class="dashboard display-animation" flex>
-        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.facultad">
-          <span class="content-wrapper">
-          <span class="tile-content">
-            <span class="tile-img bgc-white" style="background-image: url(images/bghome-4.jpg);background-size:cover;"></span>
-            <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title">Ingresantes</span>
-              <p>Breve Descripción</p>
-            </span>
-          </span>
-          </span>
-        </a>
-      </div>
-      <div class="dashboard display-animation" flex>
-        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.facultad">
-          <span class="content-wrapper">
-          <span class="tile-content">
-            <span class="tile-img bgc-blue-grey-500 tc-white md-padding" >
-                <i class="fa fa-area-chart fa-5x"></i>
-            </span>
-            <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title ">Reportes</span>
-              <p>Breve Descripción</p>
-            </span>
-          </span>
-          </span>
-        </a>
-      </div>
-    </div>
+                </span>
+                <span class="tile-holder tile-holder-sm grey-500" >
+
+                  <span class="title">
+
+                  {{item.title}}
+                  </span>
+                  <p>
+                  {{item.description}}
+
+                  </p>
+
+                </span>
+              </span>
+              </span>
+            </a>
+          </div>
+
+        </div>
+
   </md-content>
-</div>
 
-<md-button ng-click="New($event)" class="md-fab md-fab-bottom-right" aria-label="Use Android" >
-  <md-icon md-font-icon="fa fa-question fa-lg"></md-icon>
-</md-button>
+</md-content>
