Mantenimiento Parametros terminado y algunas correcciones en Alumnos

--- a/client/app/views/alumno/misdatos.html
+++ b/client/app/views/alumno/misdatos.html
@@ -8,7 +8,7 @@
       <!--tabla: contiene el listado de elementos-->
       <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh" class="md-accent"></md-progress-linear>
       <div flex layout="row" layout-sm="row">
-        <div flex>
+        <div>
           <md-input-container class="md-block">
             <label>Código</label>
 
