--- a/client/app/views/alumnos/list.html
+++ b/client/app/views/alumnos/list.html
@@ -14,7 +14,7 @@
             <td style="width:30px;">
               <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
             </td>
-            <td class="text-left" data-title="'Código'" sortable="codigo" filter="{'codigo':'text'}">{{item.nombres}}</td>
+            <td class="text-left" data-title="'Código'" sortable="codigo" filter="{'codigo':'text'}">{{item.codigo}}</td>
             <td class="text-left" data-title="'Nombres'" sortable="nombres" filter="{'nombres':'text'}">{{item.nombres}}</td>
             <td class="text-left" data-title="'Apellidos'" sortable="apellidos" filter="{'apellidos':'text'}">{{item.apellidos}}</td>
           </tr>
