--- a/client/app/views/parametros/form.html
+++ b/client/app/views/parametros/form.html
@@ -22,7 +22,7 @@
           </md-input-container>
         </div>
         <div flex>
-          
+
         </div>
       </div>
       <div flex layout="row" layput-sm="column">
@@ -39,12 +39,15 @@
       </div>
 
       <div flex layout="row" layout-sm="column">
-        <div flex="30" layout-align="start start" flex-sm="100" class="text-left">
-          <md-checkbox ng-model="model.activo">
-            Activo
+        <div flex="50" layout="row" layout-align="start center" flex-sm="100">
+          <md-checkbox ng-model="model.activoPeriodo">
+            Activo Periodo
+          </md-checkbox>
+          <md-checkbox ng-model="model.activoEscuela">
+            Activo Escuela
           </md-checkbox>
         </div>
-        <div flex="70" layout="row" layout-align="end center" flex-sm="100">
+        <div flex="50" layout="row" layout-align="end center" flex-sm="100">
           <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
           <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
         </div>
