--- a/client/app/views/parametros/list.html
+++ b/client/app/views/parametros/list.html
@@ -16,8 +16,8 @@
             </td>
             <td class="text-left" data-title="'Código'" sortable="codigo" filter="{'codigo':'text'}">{{item.codigo}}</td>
             <td class="text-left" data-title="'Nombre'" sortable="nombre" filter="{'nombre':'text'}">{{item.nombre}}</td>
-            <td class="text-left" data-title="'Activo Periodo'" sortable="resolucion" filter="{'activoPeriodo':'text'}">{{item.activoPeriodo}}</td>
-            <td class="text-left" data-title="'Activo Escuela'">{{item.activoEscuela}}</td>
+            <td class="text-left" data-title="'Activo Periodo'"><md-checkbox ng-checked="{{item.activoPeriodo}}"></md-checkbox></td>
+            <td class="text-left" data-title="'Activo Escuela'"><md-checkbox ng-checked="{{item.activoEscuela}}"></md-checkbox></td>
           </tr>
         </tbody>
       </table>
